--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </svg>
         </li>
       </ul>
-      <button type="button" class="genre__button">Continue</button>
+      <button type="button" class="genre__button">Privet</button>
     </section>
     <footer class="footer">
       <nav class="main-nav">
