--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <section class="genre">
       <h1 class="genre__title">What do you want to play?</h1>
       <ul class="genre__list">
-        <li class="genre__item genre__item--active">
+        <li class="genre__item">
           <svg class="genre__svg" width="64" height="64">
             <use xlink:href="img/icons/stack.svg#racing-icon"></use>
           </svg>
           <p class="genre__text">Racing</p>
-          <svg class="genre__svg-checked genre__svg-checked--active" width="64" height="64">
+          <svg class="genre__svg-checked" width="64" height="64">
             <use xlink:href="img/icons/stack.svg#checked-icon"></use>
           </svg>
         </li>
@@ -73,12 +73,12 @@
           </svg>
         </li>
       </ul>
-      <button type="button" class="genre__button">Continue</button>
+      <a class="genre__button">Continue</a>
     </section>
     <footer class="footer">
       <nav class="main-nav">
         <li>
-          <a class="main-nav__item main-nav__item--active" href="" id="games-button">
+          <a class="main-nav__item main-nav__item--active" id="games-button">
             <svg class="main-nav__svg-games" width="24" height="24">
               <use xlink:href="#games-icon"></use>
             </svg>
@@ -95,6 +95,6 @@
         </li>
       </nav>
     </footer>
-    <script src="js/script.js" defer></script>
+    <script src="js/index.js" defer></script>
   </body>
 </html>
