--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li>
-          <a class="main-nav__item" href="" id="watch-button">
+          <a class="main-nav__item" id="watch-button">
             <svg class="main-nav__svg-watch" width="24" height="24">
               <use xlink:href="img/icons/stack.svg#heart-icon"></use>
             </svg>
