--- a/index.html
+++ b/index.html
@@ -7,23 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <svg style="display: none">
-      <symbol id="games-icon" viewBox="0 0 984 984">
-        <path d="M52.832,896.588c23.7,15.7,55.1,12.8,75.7-6.8c0,0,117.9-100.9,152.8-128.9c10.8-8.7,24.3-13.399,38.2-13.399h172.6h172.6
-          c13.899,0,27.399,4.699,38.2,13.399c34.899,28,152.8,128.9,152.8,128.9c20.6,19.6,52,22.5,75.7,6.8
-          c77.6-51.6,52.1-189.9,33.1-266.9c-15.7-63.8-37.8-126.1-63.1-186.7c-37.301-89.2-118.801-202.8-232.2-178.5
-          c-11.3,2.7-23.9,9.3-33.101,14.9c-9.5,5.7-20.399,8.8-31.5,8.8h-72.5v-170.6c0-22.1-17.899-40-40-40c-22.1,0-40,17.9-40,40v170.5
-          h-72.5c-11.1,0-22-3-31.5-8.8c-9.199-5.5-21.8-12.1-33.1-14.9c-113.3-24.3-194.9,89.3-232.2,178.5c-25.3,60.7-47.3,123-63.1,186.8
-          C0.732,706.688-24.768,844.989,52.832,896.588z M732.631,375.088c24,0,43.5,19.5,43.5,43.5s-19.5,43.5-43.5,43.5
-          s-43.5-19.5-43.5-43.5S708.631,375.088,732.631,375.088z M629.631,501.688c24,0,43.5,19.5,43.5,43.5s-19.5,43.5-43.5,43.5
-          s-43.5-19.5-43.5-43.5S605.631,501.688,629.631,501.688z M198.032,453.188h50.6v-50.6c0-16.6,13.4-30,30-30s30,13.4,30,30v50.6
-          h50.601c16.6,0,30,13.4,30,30c0,16.601-13.4,30-30,30h-50.601v50.601c0,16.6-13.399,30-30,30s-30-13.4-30-30v-50.601h-50.6
-          c-16.6,0-30-13.399-30-30C168.032,466.588,181.532,453.188,198.032,453.188z"/>
-      </symbol>
-      <symbol id="heart-icon" viewBox="0 0 48 48">
-        <path d="M34,4c-3.9,0-8,3.1-10,6.5C22,7.1,17.9,4,14,4A12,12,0,0,0,5.5,7.6,11.9,11.9,0,0,0,2,16.1c0,4.1,2.7,7.6,5,10.2L23.3,43.7a1,1,0,0,0,1.4,0L41,26.3c2.3-2.6,5-6.1,5-10.2A12.1,12.1,0,0,0,34,4Z"/>
-      </symbol>
-    </svg>
     <section class="genre">
       <h1 class="genre__title">What do you want to play?</h1>
       <ul class="genre__list">
@@ -80,7 +63,7 @@
         <li>
           <a class="main-nav__item main-nav__item--active" id="games-button">
             <svg class="main-nav__svg-games" width="24" height="24">
-              <use xlink:href="#games-icon"></use>
+              <use xlink:href="img/icons/stack.svg#games-icon"></use>
             </svg>
             <p class="main-nav__item-text">Games</p>
           </a>
@@ -88,7 +71,7 @@
         <li>
           <a class="main-nav__item" href="" id="watch-button">
             <svg class="main-nav__svg-watch" width="24" height="24">
-              <use xlink:href="#heart-icon"></use>
+              <use xlink:href="img/icons/stack.svg#heart-icon"></use>
             </svg>
             <p class="main-nav__item-text">Watchlist</p>
           </a>
